# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workerQueue"
version = "0.0.3"
description = "A simple distributed job queue using a MongoDB backend."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pymongo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
authors = [
  {name = "Alec McGail", email = "amcgail2@gmail.com"},
]

[tool.hatch.build.targets.wheel]
packages = ["workerQueue"]